# torch-repr-shape

./: .gitignore  README.md  pyproject.toml
src/torch_repr_shape/: patch.py
tst/: tst_01.py
