[project]
name = "torch_repr_shape"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []


[[tool.uv.index]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true


[tool.uv.sources]
torch = [{ index = "pytorch_cu130" }]
torchaudio = [{ index = "pytorch_cu130" }]
torchvision = [{ index = "pytorch_cu130" }]
rainzl = [{ index = "testpypi" }]


[tool.uv]
default-groups = ["dev"]


[dependency-groups]
dev = [
    "numpy>=2.3.5",
    "rainzl>=0.0.1",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
]


[tool.setuptools.packages.find]
where = ["src"]
